Add get random movie functionality and display of movie info

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
                 <br><br>
                 <select id="genre" name="genre"></select>
                 <br><br>
-                <button type="submit" id="search-button">Pick a Movie</button>
             </form>
+            <button id="search-button">Pick a Movie</button>
         </section>
         <section id="result-section">
             <h2 id="movie-title"></h2>
             <p id="movie-release-year"></p>
-            <figure id="movie-poster"></figure>
+            <figure id="movie-figure"></figure>
             <p id="movie-overview"></p>
         </section>        
     </body>
