Fix multiple posters issue and adjust css layout

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
         <section id="result-section">
             <h2 id="movie-title"></h2>
             <p id="movie-release-year"></p>
-            <figure id="movie-figure"></figure>
-            <p id="movie-overview"></p>
+            <div id="flex-container">
+                <figure id="movie-figure">
+                <img src="" id="movie-poster" alt=""/>
+                </figure>
+                <p id="movie-overview"></p>
+            </div>
         </section>        
     </body>
 </html>
