Add fonts and icons

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
     <head>
         <title>MoviePicker</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://kit.fontawesome.com/096552b4df.js" crossorigin="anonymous"></script>
         <script src="./resources/main.js" type="application/javascript" defer></script>
         <link rel="stylesheet" type="text/css" href="./resources/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Odibee+Sans&family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
         <section id="form-section">
-            <h1>MoviePicker</h1>
+            <h1><i class="fas fa-film"></i> MoviePicker <i class="fas fa-film"></i></h1>
             <form>
                 <label>Select a genre:</label>
                 <br><br>
