Add footer and movie release date

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </section>
         <section id="result-section">
             <h2 id="movie-title"></h2>
-            <p id="movie-release-year"></p>
+            <p id="movie-release-date"></p>
             <div id="flex-container">
                 <figure id="movie-figure">
                 <img src="" id="movie-poster" alt=""/>
@@ -32,4 +32,7 @@
             </div>
         </section>        
     </body>
+    <footer>
+        <p><i class="fas fa-copyright"></i> Copyright Randoraz 2022</p>
+    </footer>
 </html>
